# heightmap-navmesh

./: Cargo.toml  readme.md  todo.md
res/: glowy-rock.glb  spherical-cube.glb  walking.glb
src/: game.rs  input.rs  main.rs
src/pipelines/: debug.rs  debug.wgsl  fur.rs  fur.wgsl  mod.rs
src/resources/: bindings.rs  buffer.rs  camera.rs  level.rs  mod.rs  model.rs  render_format.rs  texture.rs
