[package]
name = "fur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-fs = "2.1.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
glam = { version = "0.24.2", features = ["bytemuck"] }
gltf = "1.3.0"
instant = "0.1.12"
pollster = "0.3.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
wgpu = { version = "0.18.0", features = ["serde"] }
winit = { version = "0.29", features = ["rwh_05"] }
